--- a/build
+++ b/build
@@ -1,5 +1,9 @@
 #!/usr/bin/env sh
 
+        # --vapi=../../.local/lib/sdx.vapi \
+        # --gir ../../.local/lib/sdx-0.1.gir \
+        # -o ../../.local/lib/sdx.so \
+
 valac   --pkg gee-0.8 \
         --pkg SDL2_image \
         --pkg SDL2_mixer \
@@ -12,14 +16,12 @@ valac   --pkg gee-0.8 \
         --disable-warnings \
         --vapidir src/vapis \
         --library=sdx \
-        --vapi=../../.local/lib/sdx.vapi \
-        --gir ../../.local/lib/sdx-0.1.gir \
         --save-temps \
         -X -fPIC \
         -X -shared \
         -X -O3 \
         -X -g \
-        -o ../../.local/lib/sdx.so \
+        -o bin/sdx.dll \
         src/JsGame.gs  \
         src/JsFactory.gs  \
         src/Application.gs \
@@ -79,9 +81,9 @@ valac   --pkg gee-0.8 \
         src/utils/StringTokenizer.gs \
         src/utils/viewport/Viewport.gs 
 
-g-ir-compiler /home/bruce/.local/lib/sdx-0.1.gir \
-        --shared-library=/home/bruce/.local/lib/sdx.so \
-        --output=/home/bruce/.local/lib/sdx-0.1.typelib 
+# g-ir-compiler /home/bruce/.local/lib/sdx-0.1.gir \
+#         --shared-library=/home/bruce/.local/lib/sdx.so \
+#         --output=/home/bruce/.local/lib/sdx-0.1.typelib 
         
 
 # npm run gir2dts
