--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
   "files": [
     "src/js/sdx.d.ts",
     "src/js/gjs.d.ts",
+    "src/js/prolog.js",
     "src/js/gnode.js",
     "src/js/shmupwarz.d.ts",
     "src/js/shmupwarz.ts"
