--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,7 @@ set (VERSION "0.0.1")
 set (TESTSRCDIR "${CMAKE_SOURCE_DIR}")
 set (DOLLAR "$")
 
-configure_file (${CMAKE_SOURCE_DIR}/src/Config.vala.cmake ${CMAKE_BINARY_DIR}/src/Config.vala)
+configure_file (${CMAKE_SOURCE_DIR}/src/Config.vala.base ${CMAKE_BINARY_DIR}/src/Config.vala)
 add_definitions(-DGETTEXT_PACKAGE=\"${GETTEXT_PACKAGE}\")
 configure_file (${CMAKE_CURRENT_SOURCE_DIR}/sdx.pc ${CMAKE_CURRENT_BINARY_DIR}/sdx.pc)
 configure_file (${CMAKE_CURRENT_SOURCE_DIR}/sdx.deps ${CMAKE_CURRENT_BINARY_DIR}/sdx.deps)
@@ -28,16 +28,17 @@ set (VALA_PACKAGES ${VALA_PACKAGES} SDL2_image)
 set (VALA_PACKAGES ${VALA_PACKAGES} SDL2_mixer)
 set (VALA_PACKAGES ${VALA_PACKAGES} SDL2_ttf)
 set (VALA_PACKAGES ${VALA_PACKAGES} gee-0.8)
-set (VALA_PACKAGES ${VALA_PACKAGES} json-glib-1.0)
-set (VALA_PACKAGES ${VALA_PACKAGES} sdl2)
 set (VALA_PACKAGES ${VALA_PACKAGES} gio-2.0)
 set (VALA_PACKAGES ${VALA_PACKAGES} glib-2.0)
 set (VALA_PACKAGES ${VALA_PACKAGES} gobject-2.0)
+set (VALA_PACKAGES ${VALA_PACKAGES} json-glib-1.0)
+set (VALA_PACKAGES ${VALA_PACKAGES} sdl2)
 
 set (APP_SOURCES ${APP_SOURCES} ${CMAKE_CURRENT_BINARY_DIR}/Config.vala)
 set (APP_SOURCES ${APP_SOURCES} Application.gs)
 set (APP_SOURCES ${APP_SOURCES} ApplicationListener.gs)
 set (APP_SOURCES ${APP_SOURCES} Audio.gs)
+set (APP_SOURCES ${APP_SOURCES} Example.vala)
 set (APP_SOURCES ${APP_SOURCES} Exceptions.gs)
 set (APP_SOURCES ${APP_SOURCES} Files.gs)
 set (APP_SOURCES ${APP_SOURCES} Game.gs)
@@ -45,6 +46,8 @@ set (APP_SOURCES ${APP_SOURCES} Graphics.gs)
 set (APP_SOURCES ${APP_SOURCES} Input.gs)
 set (APP_SOURCES ${APP_SOURCES} InputAdapter.gs)
 set (APP_SOURCES ${APP_SOURCES} InputProcessor.gs)
+set (APP_SOURCES ${APP_SOURCES} JsFactory.gs)
+set (APP_SOURCES ${APP_SOURCES} JsGame.gs)
 set (APP_SOURCES ${APP_SOURCES} Net.gs)
 set (APP_SOURCES ${APP_SOURCES} Screen.gs)
 set (APP_SOURCES ${APP_SOURCES} Sdx.gs)
@@ -99,7 +102,7 @@ if ((${CMAKE_BUILD_TYPE} STREQUAL "Debug") OR (${CMAKE_BUILD_TYPE} STREQUAL "Rel
 endif()
 
 set (COMPILE_OPTIONS ${COMPILE_OPTIONS} --library=sdx --gir sdx-0.0.gir )
-set (COMPILE_OPTIONS ${COMPILE_OPTIONS} --disable-warnings --gir )
+set (COMPILE_OPTIONS ${COMPILE_OPTIONS} --disable-warnings )
 
 set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O3" )
 
